<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="deployits.com.ec.avispa_t.activity.sesion.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_correo_electronico"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true" />

        <in.anshul.libray.PasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            app:hide_text="@string/hide_password"
            app:password_visible="false"
            app:show_text="@string/show_password" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickInicioSesion"
            android:text="@string/action_sign_in"
            android:textColor="?android:attr/colorLongPressedHighlight"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/txtOlvidastePass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtOlvidastePass"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:onClick="onClickRecuperaCuenta"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/txtOlvidasteContrasena"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/create_sing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/create_sing"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickCrearCuenta"
            android:text="@string/action_create_sing"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>